--- a/programme/index.html
+++ b/programme/index.html
@@ -181,7 +181,7 @@
 <strong>9h20</strong> – Kevin J. M. Martin, Satyajit Das, Rohit Prasad and Philippe Coussy, <strong>Calcul flottant et transprécision sur CGRA</strong>
 </li>
 <li>
-<strong>9h45</strong> – Arthur Blanleuil and Caroline Collange, <strong>Scheduling paths leveraging dynamic information in SIMT architectures</strong>
+<strong>9h45</strong> – Lily Blanleuil and Caroline Collange, <strong>Scheduling paths leveraging dynamic information in SIMT architectures</strong>
 </li>
 <li>
 <strong>10h10</strong> – Kenelm Louetsi, David Parello and Bernard Goossens, <strong>Un environnement de développement d’applications sur un processeur à beaucoup de cœurs parallélisant</strong>
